[tool.poetry]
name = "ltc-client"
version = "0.2.0"
description = "\"Client and Worker module for Tin Arm Engineering LTC service\""
authors = ["Martin West <martin@tinarmengineering.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
python-logging-rabbitmq = "^2.3.0"
requests = "^2.32.3"
Pint = "^0.24"
numpy = "^2.0.0"
webstompy = {git = "https://github.com/point8/webstompy"}
tqdm = "^4.66.4"


[tool.poetry.group.test.dependencies]
mock = "^5.1.0"
teamcity-messages = "^1.32"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
